--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
   "author": "Yash Wason",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "csurf": "^1.10.0",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.1",
+    "ejs-lint": "^0.3.0",
     "express": "^4.17.0",
+    "express-session": "^1.16.1",
+    "express-validator": "^5.3.1",
     "mongoose": "^5.5.9",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
