RazorPay payment gateway integrated

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.5.9",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "razorpay": "^2.0.4"
   }
 }
