--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.3",
     "csurf": "^1.10.0",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.1",
