--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "express": "^4.17.0",
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
+    "googleapis": "^40.0.0",
     "mongoose": "^5.5.9",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "razorpay": "^2.0.4"
