--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "razorpay": "^2.0.4"
+    "passport-local": "^1.0.0"
   }
 }
